# MAI-OOP-LR5

./: CMakeLists.txt  README.md  main.cpp
include/: allocator.h  dynamic_array.h
test/: tests.cpp
